@@ -164,7 +164,6 @@
                         <visible>Integer.IsEqual(Window.Property(CurrentFocus),9001)</visible>
                         <include>Defs_Settings_Button</include>
                         <label>$LOCALIZE[31115]</label>
-                        <enable>Skin.HasSetting(VerticalHome)</enable>
                         <selected>Skin.HasSetting(HomeIcons)</selected>
                         <onclick>Skin.ToggleSetting(HomeIcons)</onclick>
                     </control>
